2-deployment/service_conv.yml
apiVersion: v1
kind: Service
metadata:
  name: service-conv
spec:
  type: ClusterIP
  ports:
    - name: servc-app-port
      port: 80
      protocol: TCP
  selector:
    component: app-conv
