2-deployment/ingress-conv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-conv
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: conv.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-conv
            port:
              number: 80
